fixed css text-wrap bug using the invalid value: 'standard'

--- a/ext/css/text_pagewrap.css
+++ b/ext/css/text_pagewrap.css
@@ -12,11 +12,7 @@ pre {
 }
 
 article > pre {
-  /*
-  The text-wrap property has two usable values, "standard" and "pretty", standard is
-  the safer option as it limits parsing to the first few lines per paragraph.
-  */
-  text-wrap: standard;
+  text-wrap: wrap;
   /*
   The layout.css has a min-width value set to 640px to mimic an 80-column display.
   While using page wrap, the min-width should be set to auto,
